# minirustc

./: .gitignore  CMakeLists.txt  README.md  TODO.md  flake.nix  test.rs
docs/: Lexing.md  README.md
src/: main.cpp
src/ast/: AST.hpp  Ast.h  Binop.h  Body.h  Expr.h  Ident.h  Item.h  Lit.h  Stmt.h  Type.h  prelude.h
src/ast/struct/: BindingMode.h  Block.h  Fn.h  Local.h  Pat.h  Path.h
src/ast/visitor/: PrintVisitor.h  TstVisitor.h  Visitor.cpp  Visitor.h  Walker.h
src/driver/: Driver.cpp  Driver.h  Driver.hpp
src/interpreter/: Interpreter.cpp  Interpreter.h  Type.cpp  Type.h
src/lexer/: Location.hpp  Scanner.h  Scanner.hpp  Token.h  lexer copy.l  lexer.c  lexer.l  tokens.h
src/mr/: Binop.h  Mr.cpp  Mr.h  Path.h  prelude.h
src/mr/visitor/: PrintVisitor.h  Visitor.cpp  Visitor.h
src/parser/: parser.c  parser.y
src/tests/: Test.hpp
src/tst/: Block.h  Expr.h  Function.h  Local.h  Stmt.h  Type.cpp  Type.h  prelude.h  tst.cpp  tst.h
src/tst/visitor/: TstVisitor.h
src/typechecking/: Type.cpp  Type.h  TypeChecker.h
src/util/: util.h
test/: integer_literal.rs
test/blackboard/: 1-var.rs  2-shadow copy.rs  2-shadow.rs  3-i32.rs  4-func.rs  5-block.rs
test/general/: fibonacci.rs  loop.rs  while.rs
test/parsing/: if.rs  types.rs
